--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Using Local Font -->
   <link rel="stylesheet" type="text/css" href="/fonts/index.css" />
 
-  <title>Zcloud</title>
+  <title>TeleCloud</title>
   </head>
   <body>
     <div id="root"></div>
