--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 
 		<link rel="stylesheet" type="text/css" href="/fonts/index.css" />
 
-		<title>Tele Manager</title>
+		<title>Tele Manager - Securely manage and organize your Telegram files.</title>
+		<meta name="description" content="Organize and manage your Telegram files effortlessly with Tele Manager. Secure cloud storage for your Telegram media.">
+		<meta name="keywords" content="Telegram file manager, organize Telegram files, saved messages, secure file sharing, cloud storage, tele manager">
+		<meta name="robots" content="index, follow">
+		<meta name="google-site-verification" content="J-1tUSs00qYatbk9P5l41NFNhIqq_l3YtT38pWsNJgI" />
 		<style>
 			body {
 				overflow-y: scroll;
