--- a/index.html
+++ b/index.html
@@ -22,9 +22,20 @@
 		<link rel="stylesheet" type="text/css" href="/fonts/index.css" />
 
 		<title>Tele Manager - Securely upload, manage and organize your Telegram files.</title>
-		<meta name="description" content="Organize and manage your Telegram files effortlessly with Tele Manager. Secure cloud storage for your Telegram media.">
-		<meta name="keywords" content="Telegram file manager, organize Telegram files, saved messages, secure file sharing, cloud storage, tele manager">
+		<meta name="description" content="Tele Manager web app lets you upload, manage, and organize unlimited files on Telegram easily. Secure cloud storage for your Telegram media.">
+		<meta name="keywords" content="tele-manager web app, tele manager web app, tele manager, Telegram file manager, organize Telegram files, telemanager web app, saved messages file upload, cloud storage, unlimited cloud, telemanager unlimited cloud, telemanager file manager, tele manager telegram ">
 		<meta name="robots" content="index, follow">
+
+		<script type="application/ld+json">
+			{
+			  "@context": "https://schema.org",
+			  "@type": "WebSite",
+			  "name": "Telegram File Manager",
+			  "url": "https://tele-manager.web.app",
+			  "description": "Securely upload, manage and organize your Telegram files."
+			}
+			</script>
+
 		<style>
 			body {
 				overflow-y: scroll;
